Update FishBag.java
Gem